# cmpe492

./: .gitignore  .gitmodules  deploy.sh  docker-compose.yml  ref.md  test.json
analysis/: USAGE.txt  __init__.py  correlation.py  deviation_calculator.py  pyproject.toml  reporting.py  run_analysis.py  slippage.py  symbol_mapper.py  volume_analysis.py
database/: .env.database  DATABASE.md  README.md  __init__.py  check-docker.sh  db_client.py  db_init.py  docker-compose.yml  fix_schema.sql  init-db.sql  pyproject.toml  start-db.sh
database/cmpe492_database.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dex-prices/: .gitignore  Dockerfile  README.md  abis.go  cache.go  config.go  config.json  db_writer.go  decoder.go  evm.go  go.mod  go.sum  handler.go  main.go  solana.go
dex-prices/cache/: pair_cache_1.json  token_cache_1.json
poster/: Makefile  poster.bib  poster.tex
poster/charts/: structure.drawio
price-index/: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  bookticker.proto  dashboard.py  db_writer.go  exchange_info.json  ffi.go  ffi.py  go.mod  go.sum  main.go  pyproject.toml  schema.go
price-index/.streamlit/: config.toml  secrets.toml
price-index/schema/: ticker.go  (+1 more)
report/: Makefile  final-report.tex  main.tex  main.toc  mt-report.tex  references.bib
snip/: binance_ws.go  dashboard.py  go.mod  main.go  okx_ws.go
uniswap-eth-listener/: .env.example  main.py  pair_cache.json  pyproject.toml  requirements.txt  token_cache.json
uniswap-v4-bsc-swap-listener/: .env  .env.example  README.md  listen_swaps.py  pyproject.toml
(+3 files in other folders)
