[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmpe492-analysis"
version = "0.1.0"
description = "CEX vs DEX market analysis and correlation detection"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=0.19.0"
]

[tool.setuptools]
py-modules = ["correlation", "reporting"]
