[project]
name = "uniswap-eth-listener"
version = "0.1.0"
description = "Uniswap swap event listener for Ethereum and EVM-compatible chains"
requires-python = ">=3.9"
dependencies = [
    "web3>=7.0.0",
    "python-dotenv>=1.0.0",
    "picows>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
